[project]
name = "aieng-eval-agents"
version = "0.1.0"
description = "Agentic AI Evaluation reference implementation from Vector Institute AI Engineering"
authors = [{name = "Vector AI Engineering", email = "ai_engineering@vectorinstitute.ai"}]
requires-python = ">=3.12,<4.0"
readme = "README.md"
license = "MIT"
dependencies = [
    "kagglehub>=0.4.1",
    "sqlalchemy>=2.0.46",
    "sqlglot>=28.6.0",
    "weaviate-client>=4.18.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["aieng/"]

[tool.hatch.build.targets.wheel]
include = ["aieng/"]
